--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^11.1.0",
     "@nestjs/platform-express": "^11.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "joi": "^17.13.3",
+    "mongoose": "^8.18.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
